Added new Button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, nulla?</p>
     <br/>
-    <a href="https://www.cricbuzz.com/" target="_blank"> Cricbuzz</a>
+    <button> <a href="https://www.cricbuzz.com/" target="_blank"> Cricbuzz</a></button>
+   
 </body>
 </html>
