--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, nulla?</p>
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, nulla?</p>
     <br/>
     <button> <a href="https://www.cricbuzz.com/" target="_blank"> Cricbuzz</a></button>
+    </div>
    
 </body>
 </html>
