--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, nulla?</p>
+        <p>I AM LEARNING GIT & GITHUB FOR OPENSOURCE CONTRIBUTION</p>
     <br/>
     <button> <a href="https://www.cricbuzz.com/" target="_blank"> Cricbuzz</a></button>
     </div>
