--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <p>I AM LEARNING GIT & GITHUB FOR OPENSOURCE CONTRIBUTION</p>
-        <p>THIS IS FEATURE-2 WHICH IS VERY NEW </p>
+        <p>THIS IS FEATURE-2 WHICH IS VERY NEW1 </p>
     <br/>
     <button> <a href="https://www.cricbuzz.com/" target="_blank"> Cricbuzz</a></button>
     </div>
